<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eaeaf5"
    tools:context=".presentation.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/search_back"
                    android:backgroundTint="@color/teal_200"
                    android:contentDescription="@string/image"
                    android:src="@drawable/ic_launcher_foreground"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginVertical="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/ic_baseline_sort_24"
                    android:backgroundTint="@color/black"
                    android:contentDescription="@string/app_name"
                    android:textSize="30sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="30dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/choose_the"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageButton" />

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/food_you_love"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/searchBar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="20dp"
                    android:background="@drawable/search_back"
                    android:iconifiedByDefault="false"
                    android:theme="@style/AppSearchView"
                    app:iconifiedByDefault="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text2"
                    app:queryHint="Search for a food item"
                    app:searchIcon="@null" />

                <TextView
                    android:id="@+id/text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="45dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/categories"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/searchBar" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvShop"
                    android:layout_width="match_parent"
                    android:layout_height="82dp"
                    android:layout_marginVertical="20dp"
                    android:layout_marginStart="10dp"
                    android:overScrollMode="never"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text3"
                    app:layout_constraintVertical_bias="0.0"
                    tools:listitem="@layout/category_view" />

                <TextView
                    android:id="@+id/text4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="45dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/burgers"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rvShop" />

                <com.smarteist.autoimageslider.SliderView
                    android:id="@+id/sliderView"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:layout_marginVertical="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text4"
                    app:sliderAnimationDuration="600"
                    app:sliderAutoCycleDirection="back_and_forth"
                    app:sliderAutoCycleEnabled="true"
                    app:sliderIndicatorAnimationDuration="600"
                    app:sliderIndicatorGravity="center_horizontal|bottom"
                    app:sliderIndicatorMargin="30dp"
                    app:sliderIndicatorOrientation="horizontal"
                    app:sliderIndicatorPadding="3dp"
                    app:sliderIndicatorRadius="2dp"
                    app:sliderIndicatorSelectedColor="#ff0036"
                    app:sliderIndicatorUnselectedColor="#dedee4"
                    app:sliderScrollTimeInSec="3"
                    app:sliderStartAutoCycle="true" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>